# firebreak

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
demo/: classifier_cache.json  scenarios.yaml
docs/: cursor-integration.md
policies/: defense-standard.yaml
src/firebreak/: __init__.py  audit.py  classifier.py  dashboard.py  demo.py  interceptor.py  models.py  policy.py  server.py
tests/: test_classifier.py  test_interceptor.py  test_models.py  test_policy.py  test_scenarios.py  test_server.py
